All routes working.  Waiting for authentication.
