# swagger-output.json
@@ -5,7 +5,7 @@
     "description": "Allows for CRUD operations involved in tracking Operating a Movie Rental Business",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "localhost:5000",
   "basePath": "/",
   "schemes": ["http"],
   "paths": {
@@ -173,85 +173,129 @@
     },
     "/rented/{userId}": {
       "post": {
-        "description": "",
+        "description": "Add a movie rental to a user's record",
         "parameters": [
           {
             "name": "userId",
             "in": "path",
             "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "501": {
-            "description": "Not Implemented"
-          }
-        }
-      },
-      "put": {
-        "description": "",
-        "parameters": [
+            "type": "number"
+          },
           {
-            "name": "userId",
-            "in": "path",
+            "name": "body",
+            "in": "body",
             "required": true,
-            "type": "string"
+            "schema": {
+              "type": "object",
+              "properties": {
+                "movieId": {
+                  "type": "string"
+                }
+              },
+              "required": ["movieId"]
+            }
           }
         ],
         "responses": {
-          "501": {
-            "description": "Not Implemented"
+          "400": {
+            "description": "UserDataError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Please provide the movieId and the userId, The requested movie is not available"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "NotFoundError--No user matching that userId exists.  Please try again.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "No user matching that userId Exists. The requested movie is not available. The requested movie does not exist in the database."
+                    }
+                  }
+                }
+              }
+            }
+          },
+
+          "500": {
+            "description": "MongoDBConnectionError--There was a problem with the database. Please try again."
           }
         }
       },
+
       "get": {
-        "description": "",
+        "description": "List all of the movies that an individual user has rented",
         "parameters": [
           {
             "name": "userId",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "number"
           }
         ],
         "responses": {
-          "501": {
-            "description": "Not Implemented"
+          "400": {
+            "description": "UserDataError--You must provide a userId."
+          },
+          "404": {
+            "description": "NotFoundError--This user has rented no movies."
+          },
+          "500": {
+            "description": "MongoDBConnectionError--There was a problem connecting with the Database."
           }
         }
       }
     },
     "/rented/": {
       "get": {
-        "description": "",
+        "description": "Get a list of all movies in the Rented Movies database.",
         "responses": {
-          "501": {
-            "description": "Not Implemented"
+          "404": {
+            "description": "NotFoundError--There are no entries in the database. "
+          },
+          "500": {
+            "description": "MongoDBConnectionError--There was a problem with the database.  Please try again."
           }
         }
       }
     },
     "/rented/out/{userId}": {
       "get": {
-        "description": "",
+        "description": "Get a list of movies currently listed as in the user's possession",
         "parameters": [
           {
             "name": "userId",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "number"
           }
         ],
         "responses": {
-          "501": {
-            "description": "Not Implemented"
+          "400": {
+            "description": "UserDataError--You must provide a userId"
+          },
+          "500": {
+            "description": "MongoDBConnectionError--There was a problem with the database. Please try again."
           }
         }
       }
     },
     "/rented/{transId}": {
       "delete": {
-        "description": "",
+        "description": "Delete a transaction from the database.  Admin authorization required",
         "parameters": [
           {
             "name": "transId",
@@ -261,12 +305,76 @@
           }
         ],
         "responses": {
-          "501": {
-            "description": "Not Implemented"
+          "400": {
+            "description": "UserDataError--You must include a transaction Id to delete a transaction"
+          },
+          "401": {
+            "description": "UnauthorizedError--You must be logged in as an administrator to delete a transaction."
+          },
+          "500": {
+            "description": "MongoDBConnectionError--There was a problem with the Database.  Please try again."
+          },
+          "404": {
+            "description": "No transaction with that transaction Id exists."
+          }
+        }
+      },
+      "put": {
+        "description": "Update a rental transaction in the database",
+        "parameters": [
+          {
+            "name": "transId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": false,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "movieId": {
+                  "type": "string"
+                },
+                "userId": {
+                  "type": "number"
+                },
+                "out": {
+                  "type": "boolean"
+                },
+                "dateReturned": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "UserDataError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "There is no transaction with that Id. A transaction Id is required to update a transaction."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "MongoDBConnectionError--There was a problem with the database. Update failed."
           }
         }
       }
     },
+
     "/info/": {
       "post": {
         "description": "",
